tmux: Add zoom check to quick shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -143,8 +143,9 @@ bind | split-window -h
 bind - split-window -v
 
 # I like to quickly pop open a short shell from fullscreen apps like vim, IRC
-# TODO: make this check for an existing one and un-zoom+focus it if present
-bind _ split-window -l 10
+bind-key _ if-shell -F '#{window_zoomed_flag}' \
+    'resize-pane -Z ; select-pane -t:.+1' \
+    'split-window -l 10'
 
 # "hide", return to last pane and zoom it. Compliments the above _
 bind h select-pane -l \; resize-pane -Z
