tmux: Use available format variables to reduce execs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@
 if 'command -v reattach-to-user-namespace >/dev/null' \
     'set -gq @osx-pasteboard true'
 
-if 'tmux show -gv @osx-pasteboard' \
+if -F '#{@osx-pasteboard}' \
     'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # tmux is supposed to figure out 256-color support from terminfo and set this,
@@ -133,7 +133,7 @@ bind -t vi-copy C-v rectangle-toggle
 # Copy top of tmux paste buffer stack to OS clipboard.
 # Alternatively, this will always immediately copy to system pasteboard:
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-if 'tmux show -gv @osx-pasteboard' \
+if -F '#{@osx-pasteboard}' \
     'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 # I'll give these mnemonic split bindings a try
@@ -143,7 +143,7 @@ bind | split-window -h
 bind - split-window -v
 
 # I like to quickly pop open a short shell from fullscreen apps like vim, IRC
-bind-key _ if-shell -F '#{window_zoomed_flag}' \
+bind-key _ if -F '#{window_zoomed_flag}' \
     'resize-pane -Z ; select-pane -t:.+1' \
     'split-window -l 10'
 
