tmux: Improve feedback, add session loading mappings
Display what's happening when toggling monitoring and logging.

Both approaches to loading sessions have some shortcomings but they
ought to be useful enough, it's not important enough to me at this point
to write a bunch of sidecar bash.

Be slightly more consistent with short/long command names. Usually I
like long names in scripts and config but some of tmux's short names are
plenty expressive so I'm not getting religious.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ if 'command -v reattach-to-user-namespace >/dev/null' \
 if -F '#{@osx-pasteboard}' \
     'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
+if 'command -v fpp >/dev/null' \
+    'set -gq @has-fpp true'
+
 # tmux is supposed to figure out 256-color support from terminfo and set this,
 # but it seems to fail anyway. Kind of sucks for when I run Terminal.app...
 # TODO: we can use shell here to be smart-ish
@@ -25,7 +28,7 @@ unbind-key C-b
 bind-key a send-prefix
 
 # disable wait after escape, so vim is usable
-set-option -sg escape-time 0
+set -sg escape-time 0
 
 # in copy mode, use vi bindings and make the mouse work
 setw -g mode-keys vi
@@ -34,18 +37,18 @@ setw -g mouse-utf8 on
 
 # Ctrl-p/n for tmux command history -- the vi mode is more like shell vi mode
 # than vi command mode
-set-option -g status-keys emacs
+set -g status-keys emacs
 
 # scrollback buffer n lines
 set -g history-limit 12000
 
 # bells and monitoring
+set -g bell-action any
+set -g visual-bell on
 set -g visual-activity on
+set -g visual-silence on
 # This was removed -- what happened to it?
 # set -g visual-content on
-set -g visual-silence on
-set -g visual-bell on
-set -g bell-action any
 
 # purdy status bar
 set -g status-bg colour236
@@ -69,8 +72,8 @@ set -g set-titles on
 # set -g set-titles-string "#I:#W"
 
 # Zero-based indexing for windows and panes isn't terribly sensible.
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # the panes display and status messages don't show very long by default
 set -g display-panes-time 2000
@@ -87,7 +90,6 @@ set -g focus-events on
 # train myself on some tmux defaults that I like better than screen's
 
 # reload settings
-# TODO: bind key to load sessions?
 bind-key R source-file ~/.tmux.conf \; display-message "tmux config reloaded"
 
 # toggle previous window like screen, although prefix-l will
@@ -113,8 +115,11 @@ unbind &
 bind-key Q confirm kill-window
 bind-key X confirm kill-server
 
-bind-key m setw monitor-activity
-bind-key M command-prompt -p "monitor silence: interval (s)" "setw monitor-silence %%"
+# Monitoring toggles
+bind-key m setw monitor-activity \; display-message 'monitoring window activity [#{?monitor-activity,ON,OFF}]'
+bind-key M if -F '#{monitor-silence}' \
+    'setw monitor-silence 0 ; display-message "monitoring window silence [OFF]"' \
+    'command-prompt -p "monitor silence: interval (s)" "setw monitor-silence %%"'
 
 # name window
 unbind ,
@@ -136,19 +141,36 @@ bind -t vi-copy C-v rectangle-toggle
 if -F '#{@osx-pasteboard}' \
     'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
-# I'll give these mnemonic split bindings a try
+# mnemonic split bindings
 # unbind %
 # unbind '"'
 bind | split-window -h
 bind - split-window -v
 
+# Load a named session
+# Without completion mechanisms for tmux commands, I can't think of anything
+# easier than naming conventions to do this for now. Probably some worthy ideas
+# in: https://github.com/tmux-plugins/tmux-sessionist
+bind-key S command-prompt -p "load saved session named:" \
+    'if "tmux has-session -t %%" \
+        "display-message \"a session named %1 already exists!\"" \
+        "source-file ~/.tmux/sessions/%1.conf ; switchc -t %1"'
+
+# Interactively select session file to load. Mnemonic: Browse
+# TODO: need a way to switch to detached sessions when launched
+bind-key B if -F '#{@has-fpp}' \
+    "new-window -n session-select \
+        'sh -c \"find ~/.tmux/sessions | fpp --non-interactive -c tmux\ source-file\"'" \
+    'display-message "fpp not installed!"'
+
 # I like to quickly pop open a short shell from fullscreen apps like vim, IRC
+# TODO: prevent creating a second lower split in the case that one is open
 bind-key _ if -F '#{window_zoomed_flag}' \
     'resize-pane -Z ; select-pane -t:.+1' \
     'split-window -l 10'
 
 # "hide", return to last pane and zoom it. Compliments the above _
-bind h select-pane -l \; resize-pane -Z
+bind-key h select-pane -l \; resize-pane -Z
 
 # whizbang custom keybindings
 bind-key F1 command-prompt -p "Man:" "split-window -h 'exec man %%'"
@@ -156,11 +178,15 @@ bind-key @ command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
 bind-key / copy-mode \; send-keys ?
 
 # Toggle piping output from a pane to file
-bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#T.out'
+# Can't see a simple way to indicate activated or deactivated :-/
+# For external scripts see https://github.com/tmux-plugins/tmux-logging
+bind-key P pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#T.out' \;\
+    display-message "toggled logging of pane to ~/.tmux/logs/#S-#W-#T.out"
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind-key U capture-pane \;\
     save-buffer /tmp/tmux-buffer \;\
+    delete-buffer \;\
     split-window -l 10 "urlview /tmp/tmux-buffer"
 
 # This ugliness makes mouse scrolling a pane "Just Work" the way it did before
