tmux: Steal the buffer-to-fpp idea from tmux-fpp plugin
https://github.com/tmux-plugins/tmux-fpp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -189,6 +189,13 @@ bind-key U capture-pane \;\
     delete-buffer \;\
     split-window -l 10 "urlview /tmp/tmux-buffer"
 
+# shortcut to seed fpp file selector with pane contents.
+# idea courtesy of https://github.com/tmux-plugins/tmux-fpp
+bind-key F capture-pane -J \;\
+    save-buffer /tmp/tmux-buffer \;\
+    delete-buffer \;\
+    new-window -n fpp -c '#{pane_current_path}' "sh -c 'cat /tmp/tmux-buffer | fpp ; rm /tmp/tmux-buffer'"
+
 # This ugliness makes mouse scrolling a pane "Just Work" the way it did before
 # tmux 2.1. This will probably be a default mapping in the next version:
 # https://github.com/tmux/tmux/issues/145
