tmux: Add resurrect and continuum plugins
The combination effects automatic periodic session state saves, allowing
restore when restarting the computer or after crashes. There's some
extra stuff like Vim session restore but it doesn't fit my setup so I'm
leaving it off.

I'm generally not crazy about all the code bloat of the tmux-plugins
stuff, but these two warrant it and mostly stay out of the way.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -204,6 +204,15 @@ bind -n WheelUpPane select-pane -t = \;\
         "if -t = -F '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 #######################################################################
+#                               Plugins                               #
+#######################################################################
+
+set -g @continuum-save-interval '30'
+
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
+
+#######################################################################
 #                       Session Initialization                        #
 #######################################################################
 
