--- a/.direnvrc
+++ b/.direnvrc
@@ -21,5 +21,5 @@ use_ruby() {
 layout_gb() {
   export GOPATH="$PWD/vendor:$PWD"
   PATH_add "$PWD/vendor/bin"
-  PATH_add bin
+  PATH_add "$PWD/bin"
 }
