weechat: enable aspell suggestions display

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -44,7 +44,7 @@ notice_welcome_redirect = on
 notice_welcome_tags = ""
 notify_tags_ison = "notify_message"
 notify_tags_whois = "notify_message"
-part_closes_buffer = off
+part_closes_buffer = on
 pv_buffer = independent
 pv_tags = "notify_private"
 raw_messages = 256
