weechat: Buffer list on left side, server-nested and sorted
More cribbing from pascalpoitras, not automating the server color in the
buffer list with the perlexec script just yet.

The buffers.pl "whitelist" is a way to target certain entries in the
list with different colors. Here it's applied to the IRC server buffers.

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -240,11 +240,11 @@ buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
 buffers.hidden = off
 buffers.items = "buffers"
-buffers.position = top
+buffers.position = left
 buffers.priority = 0
 buffers.separator = on
 buffers.size = 0
-buffers.size_max = 0
+buffers.size_max = 24
 buffers.type = root
 input.color_bg = default
 input.color_delim = cyan
@@ -302,9 +302,9 @@ status.separator = on
 status.size = 1
 status.size_max = 0
 status.type = root
-title.color_bg = 98
+title.color_bg = 97
 title.color_delim = cyan
-title.color_fg = default
+title.color_fg = *254
 title.conditions = "${active}"
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
@@ -626,6 +626,8 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):k = "/window ${_window_number};/kick ${nick}"
 @item(buffer_nicklist):q = "/window ${_window_number};/query ${nick};/cursor stop"
 @item(buffer_nicklist):w = "/window ${_window_number};/whois ${nick}"
+@item(buffers):H = "/command -buffer ${full_name} irc /allchan -current buffer unhide;/command -buffer ${full_name} irc /allpv -current buffer unhide;/cursor stop"
+@item(buffers):h = "/command -buffer ${full_name} irc /allchan -current buffer hide;/command -buffer ${full_name} irc /allpv -current buffer hide;/cursor stop"
 @chat:Q = "hsignal:chat_quote_time_prefix_message;/cursor stop"
 @chat:m = "hsignal:chat_quote_message;/cursor stop"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
