--- a/.weechat/buffers.conf
+++ b/.weechat/buffers.conf
@@ -3,8 +3,8 @@
 #
 
 [color]
-current_bg = 98
-current_fg = white
+current_bg = 97
+current_fg = *white
 default_bg = default
 default_fg = default
 hotlist_highlight_bg = default
@@ -18,7 +18,7 @@ hotlist_private_fg = lightgreen
 none_channel_bg = default
 none_channel_fg = default
 number = yellow
-number_char = lightgreen
+number_char = yellow
 prefix_bufname = default
 queries_default_bg = default
 queries_default_fg = default
@@ -27,8 +27,8 @@ queries_highlight_fg = default
 queries_message_bg = default
 queries_message_fg = default
 suffix_bufname = default
-whitelist_default_bg = default
-whitelist_default_fg = default
+whitelist_default_bg = darkgray
+whitelist_default_fg = *254
 whitelist_highlight_bg = default
 whitelist_highlight_fg = default
 whitelist_low_bg = default
@@ -50,7 +50,7 @@ detach_query = off
 hide_merged_buffers = none
 hotlist_counter = off
 immune_detach_buffers = ""
-indenting = off
+indenting = on
 indenting_amount = 2
 indenting_number = on
 jump_prev_next_visited_buffer = off
@@ -70,4 +70,4 @@ show_number = on
 sort = number
 suffix_bufname = ""
 toggle_bar = on
-whitelist_buffers = ""
+whitelist_buffers = "server.gitter,server.freenode,"
