tmux: Update vi copy mode mappings config, tmux keeps breaking things...
https://github.com/tmux/tmux/issues/592
https://github.com/tmux/tmux/commit/76d6d3641f271be1756e41494960d96714e7ee58

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,6 @@ set -sg escape-time 0
 # in copy mode, use vi bindings and make the mouse work
 setw -g mode-keys vi
 setw -g mouse on
-setw -g mouse-utf8 on
 
 # Ctrl-p/n for tmux command history -- the vi mode is more like shell vi mode
 # than vi command mode
@@ -131,13 +130,13 @@ bind-key , command-prompt -p "switch to session:" "switch-client -t '%%'"
 bind-key C command-prompt -p "create session named:" "new-session -s %%"
 
 # Make copy mode more vim-like.
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy C-v rectangle-toggle
+bind-key -Tcopy-mode-vi v send -X begin-selection
+bind-key -Tcopy-mode-vi y send -X copy-selection
+bind-key -Tcopy-mode-vi C-v send -X rectangle-toggle
 
 # Copy top of tmux paste buffer stack to OS clipboard.
 # Alternatively, this will always immediately copy to system pasteboard:
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
 if -F '#{@osx-pasteboard}' \
     'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
