--- a/.tmux.conf
+++ b/.tmux.conf
@@ -211,6 +211,8 @@ set -g @continuum-save-interval '30'
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
 
+set -g @resurrect-capture-pane-contents 'on'
+
 #######################################################################
 #                       Session Initialization                        #
 #######################################################################
