--- a/.gemrc
+++ b/.gemrc
@@ -1,12 +1,13 @@
---- 
-:verbose: true
-:update_sources: true
-:sources: 
-- http://rubygems.org/
-:bulk_threshold: 1000
+# See https://guides.rubygems.org/command-reference/#gem-environment
+# vim:set ft=yaml:
+---
 :backtrace: false
-:benchmark: false
-gem: --no-ri --no-rdoc
-rdoc: --inline-source --line-numbers --format=html --template=hanna
-grep: --columns name,summary,version
+:concurrent_downloads: 8
+:sources:
+  - http://rubygems.org/
+:update_sources: true
+:verbose: true
 
+# Default gem command arguments
+gem: --no-document
+grep: --columns name,summary,version
