tmux: Tweak status bar color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ set -g visual-silence on
 # This was removed -- what happened to it?
 # set -g visual-content on
 
-# purdy status bar
+# purdy status bar -- see FORMATS section of the man page
 set -g status-bg colour236
 set -g status-fg white
 set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %m/%d %H:%M#[default]"
@@ -58,13 +58,13 @@ set -g status-justify centre
 setw -g window-status-current-bg colour98
 setw -g window-status-current-format '#[fg=black,bg=yellow] #I #[fg=white,bg=colour98] #W #F '
 setw -g window-status-current-attr bold
-set -g status-right "#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
+set -g status-right "#[fg=colour250]#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
 
 # set -g message-attr bold
 # set -g message-fg black
 # set -g message-bg yellow
 
-# try to set wm window titles with xterm codes
+# try to set wm window titles, with xterm escape sequences
 set -g set-titles on
 
 # wm window title string (uses statusbar variables)
@@ -198,6 +198,7 @@ bind-key F capture-pane -J \;\
 # This ugliness makes mouse scrolling a pane "Just Work" the way it did before
 # tmux 2.1. This will probably be a default mapping in the next version:
 # https://github.com/tmux/tmux/issues/145
+# Change the end to `'copy-mode -e; send-keys -M'` to start scroll immediately
 bind -n WheelUpPane select-pane -t = \;\
     if -t = -F "#{mouse_any_flag}" "send-keys -M" \
         "if -t = -F '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
@@ -205,6 +206,9 @@ bind -n WheelUpPane select-pane -t = \;\
 #######################################################################
 #                               Plugins                               #
 #######################################################################
+
+# Worth a look for some scrolling improvements:
+# https://github.com/NHDaly/tmux-better-mouse-mode
 
 set -g @continuum-save-interval '30'
 
