--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -98,75 +98,94 @@ scrolling:
 # change the `it` value in terminfo when altering this setting.
 tabspaces: 8
 
+fonts:
+  base: &font-defaults
+    # Normal (roman) font face
+    # normal:
+      # Font family
+      #
+      # Default:
+      #   - (macOS) Menlo
+      #   - (Linux) monospace
+      #   - (Windows) Consolas
+      #family: monospace
+
+    # Bold font face
+    #bold:
+      # Font family
+      #
+      # If the bold family is not specified, it will fall back to the
+      # value specified for the normal font.
+      #family: monospace
+
+      # The `style` can be specified to pick a specific face.
+      #style: Bold
+
+    # Italic font face
+    #italic:
+      # Font family
+      #
+      # If the italic family is not specified, it will fall back to the
+      # value specified for the normal font.
+      #family: monospace
+
+      # The `style` can be specified to pick a specific face.
+      #style: Italic
+
+    # Point size
+    size: 12.0
+
+    # Offset is the extra space around each character. `offset.y` can be thought of
+    # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
+    offset:
+      x: 0
+      y: 0
+
+    # Glyph offset determines the locations of the glyphs within their cells with
+    # the default being at the bottom. Increasing `x` moves the glyph to the right,
+    # increasing `y` moves the glyph upwards.
+    glyph_offset:
+      x: 0
+      y: 0
+
+    # Thin stroke font rendering (macOS only)
+    #
+    # Thin strokes are suitable for retina displays, but for non-retina screens
+    # it is recommended to set `use_thin_strokes` to `false`
+    #
+    # macOS >= 10.14.x:
+    #
+    # If the font quality on non-retina display looks bad then set
+    # `use_thin_strokes` to `true` and enable font smoothing by running the
+    # following command:
+    #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
+    #
+    # This is a global setting and will require a log out or restart to take
+    # effect.
+    use_thin_strokes: true
+
+  consolas: &consolas # Has italic
+    <<: *font-defaults
+    normal:
+      family: Consolas for Powerline
+    size: 13.0
+
+  consolas: &fira-code
+    <<: *font-defaults
+    normal:
+      family: Fira Code Light
+    size: 12.0
+
+  inconsolata: &inconsolata
+    <<: *font-defaults
+    normal:
+      family: Inconsolata-dz for Powerline
+    size: 12.0
+
 # Font configuration (changes require restart)
-font:
-  # Normal (roman) font face
-  normal:
-    # Font family
-    #
-    # Default:
-    #   - (macOS) Menlo
-    #   - (Linux) monospace
-    #   - (Windows) Consolas
-    #family: monospace
-    family: Inconsolata-dz for Powerline
-
-    # The `style` can be specified to pick a specific face.
-    #style: Regular
-
-  # Bold font face
-  #bold:
-    # Font family
-    #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Bold
-
-  # Italic font face
-  #italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    #family: monospace
-
-    # The `style` can be specified to pick a specific face.
-    #style: Italic
-
-  # Point size
-  size: 12.0
-
-  # Offset is the extra space around each character. `offset.y` can be thought of
-  # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
-  offset:
-    x: 0
-    y: 0
-
-  # Glyph offset determines the locations of the glyphs within their cells with
-  # the default being at the bottom. Increasing `x` moves the glyph to the right,
-  # increasing `y` moves the glyph upwards.
-  glyph_offset:
-    x: 0
-    y: 0
-
-  # Thin stroke font rendering (macOS only)
-  #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`
-  #
-  # macOS >= 10.14.x:
-  #
-  # If the font quality on non-retina display looks bad then set
-  # `use_thin_strokes` to `true` and enable font smoothing by running the
-  # following command:
-  #   `defaults write -g CGFontRenderingFontSmoothingDisabled -bool NO`
-  #
-  # This is a global setting and will require a log out or restart to take
-  # effect.
-  use_thin_strokes: true
+# font: *consolas
+# font: *fira-code
+font: *inconsolata
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -387,7 +406,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+background_opacity: 0.85
 
 # Mouse bindings
 #
