sh: Clean up shell initialization, .profile shared for bash & zsh
Removed a few dead parts, profiled and removed a few executable calls.
Language environment managers are the worst of startup time, need to see
if direnv can comfortably replace them.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@
 if 'command -v reattach-to-user-namespace >/dev/null' \
     'set -gq @osx-pasteboard true'
 
+# Requests a login shell because this is both macOS and tmux norm.
+# https://superuser.com/q/968942/79564
 if -F '#{@osx-pasteboard}' \
     'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
