tmux: Use month abbr in status line, no American date format confusion ;-)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ set -g visual-silence on
 # purdy status bar -- see FORMATS section of the man page
 set -g status-bg colour236
 set -g status-fg white
-set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %m/%d %H:%M#[default]"
+set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %b %d %H:%M#[default]"
 set -g status-left-length 35
 set -g status-justify centre
 setw -g window-status-current-bg colour98
