tmux: Use a working window swap binding, avoid direnv trouble

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,12 @@ set -g display-time 2000
 # If we want Vim to be told about focus: http://git.io/2UqSgQ
 set -g focus-events on
 
+# In case https://direnv.net is loaded when invoking tmux, unload it so the
+# active environment doesn't pollute tmux's
+set -g update-environment "DIRENV_DIFF DIRENV_DIR DIRENV_LAYOUT DIRENV_WATCHES"
+setenv -gu DIRENV_DIFF \; setenv -gu DIRENV_DIR \; setenv -gu DIRENV_LAYOUT
+setenv -gu DIRENV_WATCHES
+
 ###########################################################################
 #                    Key Bindings - Screen and Vim-ish                    #
 ###########################################################################
@@ -107,9 +113,8 @@ bind-key -r > resize-pane -R 3
 bind-key -r J swap-pane -D
 bind-key -r K swap-pane -U
 
-# TODO: Of COURSE the keycodes aren't working properly...
-bind-key -r S-Left swap-window -t -1
-bind-key -r S-Right swap-window -t +1
+bind-key -r M-, swap-window -t -1
+bind-key -r M-. swap-window -t +1
 
 # remap kill window, add confirm map before killing server
 unbind &
