tmux: Fix config syntax, renamed style key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,9 +57,8 @@ set -g status-fg white
 set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %b %d %H:%M#[default]"
 set -g status-left-length 35
 set -g status-justify centre
-setw -g window-status-current-bg colour98
 setw -g window-status-current-format '#[fg=black,bg=yellow] #I #[fg=white,bg=colour98] #W #F '
-setw -g window-status-current-attr bold
+setw -g window-status-current-style 'bg=colour98 bold'
 set -g status-right "#[fg=colour250]#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
 
 # set -g message-attr bold
@@ -86,7 +85,7 @@ set -g focus-events on
 # In case https://direnv.net is loaded when invoking tmux, unload it so the
 # active environment doesn't pollute tmux's
 set -g update-environment "DIRENV_DIFF DIRENV_DIR DIRENV_LAYOUT DIRENV_WATCHES"
-setenv -gu DIRENV_DIFF \; setenv -gu DIRENV_DIR \; setenv -gu DIRENV_LAYOUT
+setenv -gu DIRENV_DIFF ; setenv -gu DIRENV_DIR ; setenv -gu DIRENV_LAYOUT
 setenv -gu DIRENV_WATCHES
 
 ###########################################################################
